# espx-ls

./: .env  .gitignore  :w  Cargo.toml  Ideas.txt  README.md  build.sh  build_vscode.sh  build_win.sh  enable.lua  start_session.sh
app/: Cargo.toml
app/src/: lib.rs  socket.rs  state.rs  telemetry.rs
app/src/agents/: inits.rs
app/src/database/: mod.rs
app/src/handle/: error.rs  notifications.rs  requests.rs
app/src/ui/: agents.rs  database.rs  documents.rs  home.rs  mod.rs
app/src/util/: mod.rs
app/tests/app/: config.rs  database.rs  helpers.rs  notifications.rs  requests.rs  test_docs.rs  tokens.rs
client/vscode/: README.md  extension.js  package-lock.json  package.json
gui/: Cargo.toml
gui/src/: main.rs
gui/src/config/: mod.rs
gui/src/database/: mod.rs
gui/src/handle/: diagnostics.rs  error.rs
gui/src/interact/: comment_str_map.rs  lexer.rs  registry.rs
lsp/: .gitignore  Cargo.toml
lsp/espionox_config/env/: default.yaml
lsp/src/: actions.rs  agent.rs  burns.rs  code_actions.rs  config.rs  diagnostics.rs  doc_store.rs  embeddings.rs  error.rs  espx_env.rs  handle.rs  lib.rs  old.text_store.rs  parsing.rs  state.rs  text_store.rs  tree_sitter.rs  tree_sitter_querier.rs
lsp/src/.parsing/: mod.rs  tree_sitter.rs
lsp/src/.state/: mod.rs
lsp/src/.state/burns/: activations.rs  error.rs  mod.rs  multiline.rs  singleline.rs
lsp/src/.state/espx/: agents.rs  mod.rs
lsp/src/.state/store/: burns.rs  mod.rs
lsp/src/agents/: error.rs  inits.rs  mod.rs
lsp/src/burns/: actions.rs  cache.rs  echos.rs  error.rs  mod.rs  tests.rs
lsp/src/cache/: burns.rs  db_integration.rs  error.rs  lru.rs  mod.rs  tests.rs
lsp/src/cache/burns/: mod.rs
lsp/src/cache/lru/: mod.rs  util.rs
lsp/src/cache/runes/: mod.rs
lsp/src/commands/: comment_str_map.rs  error.rs  lexer.rs  mod.rs  registry.rs
lsp/src/commands/agents/: mod.rs  sys_prompts.rs
lsp/src/commands/parsing/: lexer.rs  mod.rs
lsp/src/config/: commands.rs  database.rs  mod.rs
lsp/src/database/: chunks.rs  docs.rs  error.rs  handle.rs  integrations.rs  mod.rs  vector_search.rs
lsp/src/database/models/: agent_memories.rs  block.rs  burns.rs  chunks.rs  full.rs  mod.rs
lsp/src/espx_env/: agents.rs  assistant.rs  error.rs  listeners.rs  mod.rs  sanitizer.rs  summarizer.rs  watcher.rs
lsp/src/espx_env/agents/: independent.rs  inner.rs  mod.rs
lsp/src/espx_env/listeners/: conversation_update.rs  db_rag.rs  lru_rag.rs  mod.rs  updater.rs
lsp/src/handle/: diagnostics.rs  error.rs  mod.rs  notifications.rs  requests.rs
lsp/src/handle/.actions/: mod.rs  response_burns.rs  user_io_prompt.rs
lsp/src/handle/actions/: error.rs  mod.rs  response_burns.rs
lsp/src/handle/buffer_operations/: channel.rs  error.rs  mod.rs  operations.rs
lsp/src/handle/diagnostics/: error.rs  mod.rs
lsp/src/handle/operation_stream/: error.rs  mod.rs
lsp/src/handle/responses/: code_actions.rs  diagnostics.rs  mod.rs
lsp/src/handle/runes/: error.rs  mod.rs  parsing.rs  user_actions.rs
lsp/src/handle/runes/user_actions/: mod.rs
lsp/src/htmx/: mod.rs
lsp/src/htmx/attributes/: hx-boost.md  hx-disable.md
lsp/src/htmx/espx/: help.md
lsp/src/interact/: comment_str_map.rs  error.rs  id.rs  lexer.rs  methods.rs  mod.rs  registry.rs
lsp/src/parsing/: mod.rs  tree_sitter.rs
lsp/src/state/: burns.rs  error.rs  mod.rs
lsp/src/state/.burns/: actions.rs  mod.rs
lsp/src/state/burns/: actions.rs  activations.rs  burns.rs  echos.rs  error.rs  mod.rs  multiline.rs  singleline.rs  tests.rs
lsp/src/state/database/: error.rs  handle.rs  mod.rs  tests.rs
lsp/src/state/database/docs/: burns.rs  chunks.rs  info.rs  mod.rs
lsp/src/state/database/models/: burns.rs  chunks.rs  full.rs  info.rs  mod.rs
lsp/src/state/espx/: listeners.rs  mod.rs
lsp/src/state/espx/listeners/: convo.rs  mod.rs  rag.rs
lsp/src/state/store/: burns.rs  docs.rs  error.rs  lru.rs  mod.rs
lsp/src/store/: actions.rs  burns.rs  database.rs  documents.rs  error.rs  mod.rs  tests.rs  updater.rs
lsp/src/store/database/: chunks.rs  docs.rs  error.rs  handle.rs  integrations.rs  mod.rs  models.rs  tests.rs
lsp/src/store/database/docs/: chunks.rs  info.rs  mod.rs
lsp/src/store/documents/: chunks.rs  documents.rs  mod.rs
lsp/src/tests/: database.rs  mod.rs  parsing.rs  state.rs  store.rs
lsp/src/util/: lru.rs
lsp/tests/lsp/: database.rs  helpers.rs  main.rs  notifications.rs  requests.rs
src/: main.rs  opts.rs  telemetry.rs
test/: test.html
testing/: .gitignore  Cargo.toml  espx-ls.toml  read_logs.sh  test.html  test.txt
testing/.espx-ls/: conversation.md
testing/espionox_config/: prompts.yaml
testing/espx-ls.db/: 000100.sst  000103.sst  000108.sst  000123.sst  000126.sst  000169.sst  000172.sst  000177.sst  IDENTITY  MANIFEST-000110  MANIFEST-000120  MANIFEST-000128  MANIFEST-000179
testing/src/: main.rs
tui/: Cargo.toml  espx-ls.toml
tui/src/: .lib.rs  embeddings.rs  error.rs  lib.rs  main.rs  socket.rs  state.rs  telemetry.rs  ui.rs
util/: Cargo.toml
(+43 files in other folders)
