[package]
name = "espx-ls"
version = "0.1.0"
edition = "2021"
description = "An AI language server powered by Espionox"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
structured-logger.workspace = true
walkdir.workspace = true
# tree-sitter.workspace = true
# tree-sitter-html.workspace = true

espx-lsp-server = { version = "0.1.0", path = "./lsp" }
espx-ls-util = { version = "0.1.0", path = "./util" }
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

# [build-dependencies]
# cc="*"

[workspace.dependencies]
walkdir = "2.3.3"
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive", "env"] }
log = { version = "0.4.19", features = ["kv_unstable", "kv_unstable_serde"] }
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
structured-logger = "1.0.1"


[workspace]
members = [
    "lsp", "testing",
    "util",
]
