[package]
name = "espx-ls-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace=true
clap.workspace=true
tracing.workspace=true
tracing-bunyan-formatter.workspace=true
tracing-log.workspace=true
tracing-subscriber.workspace=true
once_cell.workspace=true
espx-lsp-server = { version = "0.1.0", path = "./lsp" }


[workspace.dependencies]
once_cell = "1.19.0"
anyhow = "1.0.86"
clap = {version = "4.5.7", features = ["derive", "env"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }


tree-sitter = ">=0.22.6"
tree-sitter-rust = "0.21.2"
# tree-sitter-markdown = "0.7.1"
tree-sitter-javascript = "0.21.3"
# tree-sitter-typescript = "0.21.1"
tree-sitter-lua = "0.1.0"
tree-sitter-html = "0.20.3"
tree-sitter-python = "0.21.0"
tree-sitter-go = "0.21.0"
tree-sitter-java = "0.21.0"
tree-sitter-c = "0.21.4"
tree-sitter-css = "0.21.0"


# [patch.crates-io]
# tree-sitter = ">=0.22.6"

[workspace]
members = [
    "lsp"
]
