[package]
name = "espx-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace=true
clap.workspace=true
tracing.workspace=true
tracing-bunyan-formatter.workspace=true
tracing-log.workspace=true
tracing-subscriber.workspace=true
espx-lsp-server = { version = "0.1.0", path = "./lsp" }


[workspace.dependencies]
anyhow = "1.0.86"
clap = {version = "4.5.7", features = ["derive", "env"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }



[workspace]
members = [ "lsp", "tui", "testing"]


