[package]
name = "espx-lsp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace=true
clap.workspace=true
tracing.workspace=true
tracing-bunyan-formatter.workspace=true
tracing-log.workspace=true
tracing-subscriber.workspace=true
once_cell.workspace=true



# espionox = "0.1.32"
espionox = {path= "../../espionox"}
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
crossbeam-channel = "0.5.11"
uuid = "1.7.0"
reqwest = "0.11.24"
surrealdb = {version = "1.2.2", features=['kv-mem']}
toml = "0.8.12"
thiserror = "1.0.58"
rand = "0.8.5"
futures = "0.3.30"
fastembed = "3.5.0"
lsp-types = "0.97.0"
lsp-server = "0.7.6"
serde_json = "1.0.117"
serde = "1.0.203"
serde_with = "3.9.0"




[profile.test]
panic='abort'

[build-dependencies]
cc="*"
