[package]
name = "espx-lsp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace=true
clap.workspace=true
tracing.workspace=true
tracing-bunyan-formatter.workspace=true
tracing-log.workspace=true
tracing-subscriber.workspace=true

crossbeam-channel = "0.5.11"
lsp-types = "0.97.0"
lsp-server = "0.7.6"
serde_json = "1.0.117"
tokio = { version = "1.28.2", features = ["full"] }
